--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack src/index.js --output bin/app.js -d --watch"
+    "start": "webpack src/index.js --output build/app.js -d --watch"
   },
   "keywords": [],
   "author": "",
