--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "mithril": "^2.0.0-rc.4"
   },
   "devDependencies": {
+    "eslint": "^5.15.2",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   }
