--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "music_findr_app",
+  "private": true,
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack src/index.js --output build/app.js -d --watch"
+    "start": "webpack-dev-server --open --port 8000 --host localhost --inline --hot"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +20,9 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1"
   }
 }
