--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mithril": "^2.0.0-rc.4"
   },
   "devDependencies": {
+    "autoprefixer": "^9.5.0",
+    "css-loader": "^2.1.1",
     "eslint": "^5.15.2",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.16.0",
@@ -21,6 +23,10 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "postcss-cli": "^6.1.2",
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^0.23.1",
     "tailwindcss": "^0.7.4",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
