--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "mithril": "^2.0.0-rc.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "autoprefixer": "^9.5.0",
+    "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
     "eslint": "^5.15.2",
     "eslint-config-standard": "^12.0.0",
