--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open --port 8000 --host localhost --inline --hot"
+    "start": "webpack-dev-server --open --port 8000 --host localhost --inline --colors --hot"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,9 @@
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
+    "@types/mithril": "^1.1.16",
     "autoprefixer": "^9.5.0",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
     "eslint": "^5.15.2",
@@ -30,8 +32,10 @@
     "mini-css-extract-plugin": "^0.5.0",
     "postcss-cli": "^6.1.2",
     "postcss-loader": "^3.0.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "tailwindcss": "^0.7.4",
+    "typescript": "^3.4.3",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
