--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
     "outDir": "./dist/",
     "sourceMap": true,
     "strictNullChecks": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "module": "es6",
     "target": "es6",
     "allowJs": true
